--- a/src/main/resources/static/company.html
+++ b/src/main/resources/static/company.html
@@ -28,52 +28,55 @@
             display: flex;
             align-items: center;
             margin-bottom: 20px;
-            padding: 10px; /* 增加内边距 */
-            background-color: #f8f9fa;
-            border-radius: 10px; /* 增加圆角 */
-            min-width: 400px; /* 设置最小宽度 */
-            width: auto; /* 自适应宽度 */
+            margin-left: 16%;
+            /* 移除背景颜色和内边距 */
+            /* padding: 10px; */
+            /* background-color: #f8f9fa; */
+            /* border-radius: 10px; */
+            min-width: 400px;
+            width: auto;
         }
         .header label {
-            font-size: 18px; /* 增大字体 */
-            font-weight: 600; /* 加粗 */
-            margin-right: 15px; /* 增加标签右边距 */
-            color: #333; /* 设置标签颜色 */
+            font-size: 16px;
+            font-weight: 600;
+            margin-right: 15px;
+            color: #333;
         }
         .header input {
-            font-size: 16px; /* 增大输入框字体 */
-            padding: 12px 15px; /* 增加输入框内边距 */
-            border: 2px solid #ddd; /* 设置边框 */
-            border-radius: 6px; /* 输入框圆角 */
-            outline: none; /* 移除默认轮廓 */
-            width: 250px; /* 缩短为原来的1/5 */
-            transition: border-color 0.3s ease; /* 添加过渡效果 */
+            font-size: 16px;
+            padding: 12px 15px;
+            border: 2px solid #ddd;
+            border-radius: 6px;
+            outline: none;
+            width: 250px;
+            transition: border-color 0.3s ease;
         }
         .header input:focus {
-            border-color: #007bff; /* 聚焦时边框颜色 */
+            border-color: #007bff;
         }
         .main-content {
             display: flex;
             gap: 20px;
         }
         .left-panel {
-            flex: 8; /* 左侧更宽 */
+            flex: 8;
             min-width: 0;
         }
         .right-panel {
-            flex: 1; /* 右侧更窄 */
+            flex: 1;
             min-width: 200px;
-            background-color: #f8f9fa;
+            background-color: transparent;
             padding: 15px;
             border-radius: 5px;
             display: flex;
-            flex-direction: column; /* 垂直排列 */
+            flex-direction: column;
         }
         .section {
             margin-bottom: 20px;
-            padding: 15px;
-            border: 1px solid #ddd;
-            border-radius: 5px;
+            /* 移除边框 */
+            /* padding: 15px; */
+            /* border: 1px solid #ddd; */
+            /* border-radius: 5px; */
         }
         .form-group {
             margin-bottom: 10px;
@@ -93,7 +96,6 @@
             font-size: 13px;
         }
         button {
-            /* 默认蓝色按钮样式 */
             background-color: #007bff;
             color: white;
             padding: 5px 10px;
@@ -107,13 +109,13 @@
         button:hover {
             background-color: #0056b3;
         }
-        button.save-btn, /* 新增灰色按钮类 */
+        button.save-btn,
         button.advanced-search-btn {
-            background-color: #6c757d; /* 统一为灰色 */
+            background-color: #6c757d;
         }
         button.save-btn:hover,
         button.advanced-search-btn:hover {
-            background-color: #545b62; /* 统一为灰色悬停色 */
+            background-color: #545b62;
         }
         button.add-attention-btn {
             background-color: #6c757d;
@@ -121,16 +123,16 @@
         button.add-attention-btn:hover {
             background-color: #545b62;
         }
-        button.comment-icon-btn, /* 评论图标按钮和评论展开图标按钮样式 */
+        button.comment-icon-btn,
         button.comments-toggle-btn {
             background-color: transparent;
             color: #6c757d;
             border: 1px solid #6c757d;
             padding: 2px 5px;
             font-size: 11px;
-            display: flex; /* 使用flex布局对齐图标和文字 */
+            display: flex;
             align-items: center;
-            gap: 2px; /* 图标和文字间距 */
+            gap: 2px;
         }
         button.comment-icon-btn:hover,
         button.comments-toggle-btn:hover {
@@ -173,21 +175,21 @@
             margin-bottom: 10px;
             border-radius: 4px;
             background-color: #fafafa;
-            position: relative; /* 为评论按钮定位 */
+            position: relative;
         }
         .record-header {
             font-weight: bold;
             margin-bottom: 3px;
             font-size: 14px;
-            display: flex; /* 使用flex布局 */
-            justify-content: space-between; /* 两端对齐 */
+            display: flex;
+            justify-content: space-between;
         }
         .record-info {
             font-size: 11px;
             color: #666;
             margin-bottom: 3px;
-            display: flex; /* 使用flex布局 */
-            justify-content: space-between; /* 两端对齐 */
+            display: flex;
+            justify-content: space-between;
         }
         .record-content {
             margin-bottom: 8px;
@@ -197,13 +199,13 @@
             margin-top: 8px;
         }
         .comments-list {
-            display: none; /* 默认隐藏 */
+            display: none;
             margin-top: 5px;
             padding-top: 5px;
             border-top: 1px solid #eee;
         }
         .comments-section.expanded .comments-list {
-            display: block; /* 展开时显示 */
+            display: block;
         }
         .comment-item {
             background-color: #dee2e6;
@@ -215,99 +217,93 @@
         .comment-header {
             font-weight: bold;
             margin-bottom: 2px;
-            display: inline; /* 与info同行 */
+            display: inline;
         }
         .comment-info {
             font-size: 10px;
             color: #666;
             margin-bottom: 2px;
-            display: inline; /* 与header同行 */
+            display: inline;
         }
         .comment-content {
             font-size: 12px;
         }
-        .record-actions { /* 记录右侧操作区 */
+        .record-actions {
             position: absolute;
             top: 10px;
             right: 10px;
             display: flex;
-            flex-direction: column; /* 垂直排列图标 */
-            gap: 5px; /* 图标间距 */
+            flex-direction: column;
+            gap: 5px;
         }
-        /* 在 <style> 标签内找到 .pagination 相关的样式 */
         .pagination {
             text-align: center;
             margin: 15px 0;
-            display: flex; /* 保持为flex布局 */
-            align-items: center; /* 垂直居中对齐 */
-            justify-content: center; /* 水平居中 */
-            flex-wrap: nowrap; /* 防止换行 */
-            gap: 2px; /* 减小按钮之间的间距 */
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: nowrap;
+            gap: 2px;
         }
-
-        /* 在 <style> 标签内找到 .pagination button 相关的样式 */
         .pagination button {
-            margin: 0; /* 移除按钮默认margin */
-            padding: 3px 6px; /* 调整按钮内边距，使其更紧凑 */
+            margin: 0;
+            padding: 3px 6px;
             font-size: 11px;
-            background-color: #6c757d; /* 新增：设置为灰色背景 */
-            color: white; /* 新增：设置文字为白色 */
-            border: 1px solid #6c757d; /* 新增：边框也为灰色 */
+            background-color: #6c757d;
+            color: white;
+            border: 1px solid #6c757d;
         }
-        /* 可选：修改悬停时的颜色 */
         .pagination button:hover {
-            background-color: #545b62; /* 新增：悬停时的灰色 */
-            border-color: #545b62; /* 新增：悬停时的边框色 */
+            background-color: #545b62;
+            border-color: #545b62;
         }
-
-        /* 可选：修改当前页按钮的颜色，使其更突出 */
-        .pagination button[style*="background-color: #28a745"] { /* 针对当前页按钮的特殊样式 */
-            background-color: #28a745 !important; /* 保持绿色 */
+        .pagination button[style*="background-color: #28a745"] {
+            background-color: #28a745 !important;
             color: white !important;
             border-color: #28a745 !important;
         }
-        .pagination button[style*="background-color: #28a745"]:hover { /* 当前页按钮悬停 */
-            background-color: #218838 !important; /* 绿色悬停 */
+        .pagination button[style*="background-color: #28a745"]:hover {
+            background-color: #218838 !important;
             border-color: #218838 !important;
         }
-        .page-size-select { /* 修改选择框样式 */
-            padding: 3px 6px; /* 调整内边距，与按钮内边距一致 */
+        .page-size-select {
+            padding: 3px 6px;
             font-size: 11px;
-            margin-left: 5px; /* 与前面的按钮保持一点间距 */
-            min-width: auto; /* 允许选择框根据内容调整宽度 */
-            width: auto; /* 宽度由内容决定 */
-            border: 1px solid #ccc; /* 确保有边框 */
-            border-radius: 4px; /* 确保有圆角 */
-            box-sizing: border-box; /* 包含边框和内边距在宽度内 */
+            margin-left: 5px;
+            min-width: auto;
+            width: auto;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
         }
-        .top-controls { /* 用于对齐按钮和编辑框 */
+        .top-controls {
             display: flex;
-            justify-content: space-between; /* 左右对齐按钮 */
-            align-items: flex-start; /* 顶部对齐 */
-            margin: 0 auto 10px; /* 与编辑框居中对齐，并在下方添加间距 */
-            width: 80%; /* 与编辑框同宽 */
-            max-width: 800px; /* 与编辑框同最大宽 */
+            justify-content: space-between;
+            align-items: flex-start;
+            margin: 0 auto 10px;
+            width: 80%;
+            max-width: 800px;
         }
-        /* 调整编辑框样式 */
         #companyContentInput {
-            width: 80%; /* 设置固定宽度，例如80% */
-            max-width: 800px; /* 可选：设置最大宽度 */
-            margin: 0 auto 10px; /* 上下边距0，左右自动居中，并在下方添加间距 */
-            display: block; /* 确保块级居中 */
-            font-size: 20px; /* 新增：增大字体 */
-            font-weight: bold; /* 新增：加粗 */
+            width: 80%;
+            max-width: 800px;
+            margin: 0 auto 10px;
+            display: block;
+            font-size: 20px;
+            font-weight: bold;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
         }
         .attention-item {
             padding: 8px 5px;
             border: 1px solid #ddd;
-            margin: 2px 0; /* 确保关注项之间有垂直间距 */
+            margin: 2px 0;
             border-radius: 3px;
             cursor: pointer;
             transition: background-color 0.2s;
-            font-size: 14px; /* 字体变大 */
-            font-weight: bold; /* 字体加粗 */
-            display: flex; /* 使用flex布局 */
-            align-items: center; /* 垂直居中 */
+            font-size: 14px;
+            font-weight: bold;
+            display: flex;
+            align-items: center;
         }
         .attention-item:hover {
             background-color: #e9ecef;
@@ -326,6 +322,7 @@
             margin: 10px 0;
             font-size: 12px;
         }
+
     </style>
 </head>
 <body>
@@ -343,13 +340,13 @@
             <!-- 编辑内容区域 -->
             <div class="section">
                 <div style="text-align: center;">
-                    <textarea id="companyContentInput" rows="10" placeholder="暂无历史内容"></textarea>
+                    <textarea id="companyContentInput" rows="10" placeholder="请输入"></textarea>
                 </div>
 
                 <!-- 新增：用于对齐按钮的容器，设置与编辑框相同的宽度并居中 -->
                 <div class="top-controls">
                     <button class="save-btn" onclick="saveCompanyRecord()">保存</button>
-                    <button class="advanced-search-btn" onclick="toggleAdvancedSearch()">高级搜索</button>
+                    <button class="advanced-search-btn" onclick="toggleAdvancedSearch()">🔍</button>
                 </div>
 
                 <!-- 高级搜索表单 -->
@@ -392,7 +389,7 @@
             </div>
 
             <!-- 关注列表 -->
-            <div style="flex: 1; overflow-y: auto;"> <!-- 占据剩余空间并允许滚动 -->
+            <div style="flex: 1; overflow-y: auto;">
                 <div id="attentionsList"></div>
                 <div id="attentionPagination" class="pagination"></div>
             </div>
