前端页面布局满意的一版

--- a/src/main/resources/static/company.html
+++ b/src/main/resources/static/company.html
@@ -28,7 +28,7 @@
             display: flex;
             align-items: center;
             margin-bottom: 20px;
-            margin-left: 60%;
+            margin-left: 55%;
             /* 移除背景颜色和内边距 */
             /* padding: 10px; */
             /* background-color: #f8f9fa; */
@@ -73,6 +73,7 @@
         }
         .section {
             margin-bottom: 20px;
+            width: 100%;
             /* 移除边框 */
             /* padding: 15px; */
             /* border: 1px solid #ddd; */
@@ -293,7 +294,6 @@
             display: block;
             font-size: 20px;
             font-weight: bold;
-            box-shadow: 0 2px 8px rgba(0,0,0,0.1);
         }
         .attention-item {
             padding: 8px 5px;
