基线第一版

--- a/src/main/resources/static/company.html
+++ b/src/main/resources/static/company.html
@@ -27,14 +27,10 @@
         .header {
             display: flex;
             align-items: center;
-            margin-bottom: 20px;
-            margin-left: 55%;
-            /* 移除背景颜色和内边距 */
-            /* padding: 10px; */
-            /* background-color: #f8f9fa; */
-            /* border-radius: 10px; */
-            min-width: 400px;
-            width: auto;
+            justify-content: center; /* 添加居中对齐 */
+            width: 80%; /* 与编辑框容器宽度一致 */
+            max-width: 800px; /* 与编辑框最大宽度一致 */
+            margin: 0 auto 5px auto; /* 居中margin */
         }
         .header label {
             font-size: 16px;
@@ -48,7 +44,8 @@
             border: none;
             border-radius: 6px;
             outline: none;
-            width: 250px;
+            width: 80%;
+            max-width: 800px;
             transition: border-color 0.3s ease;
         }
         .header input:focus {
@@ -294,6 +291,8 @@
             display: block;
             font-size: 20px;
             font-weight: bold;
+            line-height: 1.6; /* 添加行间距，可根据需要调整数值 */
+            letter-spacing: 0.5px; /* 字符间距，推荐值：0.3px ~ 1px */
         }
         .attention-item {
             padding: 8px 5px;
