优化后第二版基线

--- a/src/main/resources/static/company.html
+++ b/src/main/resources/static/company.html
@@ -589,7 +589,7 @@
                         <div class="record-header">
                             <span>${record.currentDay}  ${record.info || ''}</span> <!-- 日期和info字段合并，用两个空格分隔 -->
                         </div>
-                        <div class="record-content">${record.content}</div>
+                        <div class="record-content">${record.content.replace(/\n/g, '<br>')}</div>
 
                         <!-- 记录右侧操作区 -->
                         <div class="record-actions">
