--- a/src/main/resources/static/day.html
+++ b/src/main/resources/static/day.html
@@ -445,8 +445,8 @@
         } else {
             // 非高级搜索，查询今日记录
             const today = new Date().toISOString().split('T')[0];
-            params.append('startDate', today);
-            params.append('endDate', today);
+            //params.append('startDate', today);
+            //params.append('endDate', today);
         }
         try {
             const response = await fetch(`${API_BASE}/daily-records?${params}`);
@@ -478,7 +478,7 @@
                         <div class="record-header">
                             <span>${record.currentDay}  ${record.info || ''}</span> <!-- 日期和info字段合并，用两个空格分隔 -->
                         </div>
-                        <div class="record-content">${record.content}</div>
+                        <div class="record-content">${record.content.replace(/\n/g, '<br>')}</div>
                         <!-- 记录右侧操作区 -->
                         <div class="record-actions">
                             <button class="comment-icon-btn" onclick="toggleCommentForm(${record.id}, '${record.currentDay}')">💬</button>
